--- a/app/views/pages/batman-vs-superman.html.erb
+++ b/app/views/pages/batman-vs-superman.html.erb
@@ -1,9 +1,28 @@
 <h1>batman-vs-superman</h1>
 
-<div id="img_batman">
-	<a href="<%= pages_batman_path %>">Ir a BATMAN</a>
+<div class="batman">
+	<p><a href="<%= pages_batman_path %>">Ir a BATMAN</a></p>
+
+	<form action="<%= pages_save_batman_path %>"  method="POST">
+		<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+		<label for="fname">Tu Nombre</label>
+		<input type="text" name="nombre">
+		<label for="femail">Tu Email</label>
+		<input type="text" name="email">
+		<input type="submit" >
+	</form>
+
 </div>
 
-<div id="img_superman">
-	<a href="<%= pages_superman_path %>">Ir a SUPERMAN</a>
+<div class="superman">
+	<p><a href="<%= pages_superman_path %>">Ir a SUPERMAN</a></p>
+
+	<form action="pages_save_superman_path" method="POST">
+		<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+		<label for="fname">Tu Nombre</label>
+		<input type="text" name="nombre">
+		<label for="femail">Tu Email</label>
+		<input type="text" name="email">
+		<input type="submit" >
+	</form>
 </div>
